# I2g

./: .gitattributes  .gitignore  PROJECT_GOAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
aseprite_scripts/: cleanup_outline_bg.lua  convert_sheet_to_anim.lua
devplan/: Feature_Expansion_Plan.md  Project_Evaluation_Report.md  Project_Improvement_Exploration_Report.md  Prompt.md  Session_History.md
gui/: __init__.py  cleanup_cli.py  cleanup_core.py  main.py
gui/tools/: __init__.py  animation.py  palette.py  pixel_perfect.py  resize.py
src/ss_anim_mcp/: __init__.py  aseprite_runner.py  config.py  detector.py  models.py  postprocess.py  queue.py  server.py  watcher.py
tests/: conftest.py  test_cleanup_cli.py  test_cleanup_core.py  test_config_validation.py  test_convert_inbox_scan.py  test_detector.py  test_detector_cache.py  test_detector_padding.py  test_directory_overrides.py  test_doctor_tool.py  test_failure_retention.py  test_hq_gif.py  test_job_override.py  test_line_endings.py  test_meta_failure.py  test_multi_workspace_context.py  test_output_validation.py  test_path_policy.py  test_queue_moves.py  test_settings.py  test_watcher_health.py  test_watcher_pruning.py
